feat: train and eval BiLSTM models

--- a/main.ipynb
+++ b/main.ipynb
@@ -3567,6 +3567,317 @@
       "source": [
         "plot_model(model_general, show_shapes=True)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "808f81a3",
+      "metadata": {},
+      "source": [
+        "#### Model Training"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "fe426be3",
+      "metadata": {},
+      "source": [
+        "##### Training General GloVe Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "3db0810e",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "early_stopping = EarlyStopping(monitor=\"val_loss\", patience=3, restore_best_weights=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "fdf1747c",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m73s\u001b[0m 3s/step - accuracy: 0.5009 - loss: 1.0476 - val_accuracy: 1.0000 - val_loss: 1.0153\n",
+            "Epoch 2/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m62s\u001b[0m 3s/step - accuracy: 0.5948 - loss: 0.9204 - val_accuracy: 1.0000 - val_loss: 0.8796\n",
+            "Epoch 3/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m62s\u001b[0m 3s/step - accuracy: 0.5940 - loss: 0.9031 - val_accuracy: 1.0000 - val_loss: 0.7529\n",
+            "Epoch 4/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m63s\u001b[0m 3s/step - accuracy: 0.6181 - loss: 0.8703 - val_accuracy: 1.0000 - val_loss: 0.6555\n",
+            "Epoch 5/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m60s\u001b[0m 2s/step - accuracy: 0.6331 - loss: 0.8490 - val_accuracy: 1.0000 - val_loss: 0.4811\n",
+            "Epoch 6/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 2s/step - accuracy: 0.6413 - loss: 0.8352 - val_accuracy: 1.0000 - val_loss: 0.2832\n",
+            "Epoch 7/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 2s/step - accuracy: 0.6487 - loss: 0.8259 - val_accuracy: 1.0000 - val_loss: 0.2381\n",
+            "Epoch 8/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.6609 - loss: 0.8141 - val_accuracy: 1.0000 - val_loss: 0.2013\n",
+            "Epoch 9/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m60s\u001b[0m 2s/step - accuracy: 0.6738 - loss: 0.7958 - val_accuracy: 1.0000 - val_loss: 0.1325\n",
+            "Epoch 10/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 2s/step - accuracy: 0.6832 - loss: 0.7807 - val_accuracy: 1.0000 - val_loss: 0.1212\n",
+            "Epoch 11/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 2s/step - accuracy: 0.6880 - loss: 0.7726 - val_accuracy: 1.0000 - val_loss: 0.0716\n",
+            "Epoch 12/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 2s/step - accuracy: 0.6930 - loss: 0.7587 - val_accuracy: 1.0000 - val_loss: 0.0574\n",
+            "Epoch 13/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.7036 - loss: 0.7415 - val_accuracy: 1.0000 - val_loss: 0.0565\n",
+            "Epoch 14/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.7160 - loss: 0.7186 - val_accuracy: 1.0000 - val_loss: 0.0525\n",
+            "Epoch 15/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.7227 - loss: 0.7224 - val_accuracy: 1.0000 - val_loss: 0.0488\n",
+            "Epoch 16/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.7310 - loss: 0.6889 - val_accuracy: 1.0000 - val_loss: 0.0465\n",
+            "Epoch 17/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 2s/step - accuracy: 0.7472 - loss: 0.6640 - val_accuracy: 1.0000 - val_loss: 0.0467\n",
+            "Epoch 18/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.7612 - loss: 0.6465 - val_accuracy: 1.0000 - val_loss: 0.0439\n",
+            "Epoch 19/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.7747 - loss: 0.6244 - val_accuracy: 1.0000 - val_loss: 0.0432\n",
+            "Epoch 20/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m57s\u001b[0m 2s/step - accuracy: 0.7764 - loss: 0.6104 - val_accuracy: 1.0000 - val_loss: 0.0424\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x7d1c4cab7410>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "model_general.fit(X_train_padded, y_train_categorical, epochs=20, batch_size=512, validation_split=0.2, callbacks=[early_stopping])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "3de76ba8",
+      "metadata": {},
+      "source": [
+        "##### Training Twitter GloVe Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "25d30460",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m70s\u001b[0m 3s/step - accuracy: 0.3595 - loss: 1.3466 - val_accuracy: 1.0000 - val_loss: 0.8325\n",
+            "Epoch 2/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.4565 - loss: 1.0966 - val_accuracy: 1.0000 - val_loss: 0.5808\n",
+            "Epoch 3/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 2s/step - accuracy: 0.4781 - loss: 1.0622 - val_accuracy: 1.0000 - val_loss: 0.4291\n",
+            "Epoch 4/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.5086 - loss: 1.0265 - val_accuracy: 1.0000 - val_loss: 0.3796\n",
+            "Epoch 5/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 2s/step - accuracy: 0.5042 - loss: 1.0120 - val_accuracy: 1.0000 - val_loss: 0.3002\n",
+            "Epoch 6/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.5390 - loss: 0.9853 - val_accuracy: 1.0000 - val_loss: 0.1221\n",
+            "Epoch 7/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.5439 - loss: 0.9653 - val_accuracy: 1.0000 - val_loss: 0.0862\n",
+            "Epoch 8/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 2s/step - accuracy: 0.5491 - loss: 0.9605 - val_accuracy: 1.0000 - val_loss: 0.0665\n",
+            "Epoch 9/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 2s/step - accuracy: 0.5671 - loss: 0.9169 - val_accuracy: 1.0000 - val_loss: 0.0931\n",
+            "Epoch 10/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.5591 - loss: 0.9122 - val_accuracy: 1.0000 - val_loss: 0.0607\n",
+            "Epoch 11/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 2s/step - accuracy: 0.5719 - loss: 0.9095 - val_accuracy: 1.0000 - val_loss: 0.0521\n",
+            "Epoch 12/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.6118 - loss: 0.8779 - val_accuracy: 1.0000 - val_loss: 0.0506\n",
+            "Epoch 13/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.6028 - loss: 0.8728 - val_accuracy: 1.0000 - val_loss: 0.0499\n",
+            "Epoch 14/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 2s/step - accuracy: 0.6248 - loss: 0.8407 - val_accuracy: 1.0000 - val_loss: 0.0483\n",
+            "Epoch 15/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 2s/step - accuracy: 0.6453 - loss: 0.8104 - val_accuracy: 1.0000 - val_loss: 0.0477\n",
+            "Epoch 16/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.6500 - loss: 0.7845 - val_accuracy: 1.0000 - val_loss: 0.0471\n",
+            "Epoch 17/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.6715 - loss: 0.7435 - val_accuracy: 1.0000 - val_loss: 0.0463\n",
+            "Epoch 18/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m57s\u001b[0m 2s/step - accuracy: 0.6885 - loss: 0.7058 - val_accuracy: 1.0000 - val_loss: 0.0455\n",
+            "Epoch 19/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 2s/step - accuracy: 0.6908 - loss: 0.6952 - val_accuracy: 1.0000 - val_loss: 0.0451\n",
+            "Epoch 20/20\n",
+            "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.7021 - loss: 0.6710 - val_accuracy: 1.0000 - val_loss: 0.0446\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x7d1c4ba8f390>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "model_twitter.fit(X_train_padded, y_train_categorical, epochs=20, batch_size=512, validation_split=0.2, class_weight=class_weights_dict, callbacks=[early_stopping])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "a0d25841",
+      "metadata": {},
+      "source": [
+        "#### Model Evaluation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "2cd07411",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.metrics import classification_report, accuracy_score, precision_score, recall_score, f1_score"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ccc420df",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def evaluate_model(model, X_test, y_test_categorical, encoder, model_name=\"Model\"):\n",
+        "    y_pred_prob = model.predict(X_test)\n",
+        "\n",
+        "    y_pred_classes = np.argmax(y_pred_prob, axis=1)\n",
+        "    y_true_classes = np.argmax(y_test_categorical, axis=1)\n",
+        "\n",
+        "    y_pred_labels = encoder.inverse_transform(y_pred_classes)\n",
+        "    y_true_labels = encoder.inverse_transform(y_true_classes)\n",
+        "\n",
+        "    print(f\"Classification Report for {model_name}:\")\n",
+        "    print(classification_report(y_true_labels, y_pred_labels, target_names=[str(cls) for cls in encoder.classes_]))\n",
+        "\n",
+        "    accuracy = accuracy_score(y_true_labels, y_pred_labels)\n",
+        "    precision = precision_score(y_true_labels, y_pred_labels, average=\"weighted\")\n",
+        "    recall = recall_score(y_true_labels, y_pred_labels, average=\"weighted\")\n",
+        "    f1 = f1_score(y_true_labels, y_pred_labels, average=\"weighted\")\n",
+        "\n",
+        "    print(f\"Accuracy: {accuracy:.4f}\")\n",
+        "    print(f\"Precision: {precision:.4f}\")\n",
+        "    print(f\"Recall: {recall:.4f}\")\n",
+        "    print(f\"F1 Score: {f1:.4f}\")\n",
+        "\n",
+        "    return {\n",
+        "        \"accuracy\": accuracy,\n",
+        "        \"precision\": precision,\n",
+        "        \"recall\": recall,\n",
+        "        \"f1\": f1\n",
+        "    }"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e9adf6ce",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 35ms/step\n",
+            "Classification Report for General GloVe BiLSTM:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.59      0.82      0.68      1288\n",
+            "           1       0.73      0.56      0.63      1222\n",
+            "           2       0.35      0.03      0.06       244\n",
+            "\n",
+            "    accuracy                           0.63      2754\n",
+            "   macro avg       0.55      0.47      0.46      2754\n",
+            "weighted avg       0.63      0.63      0.61      2754\n",
+            "\n",
+            "Accuracy: 0.6333\n",
+            "Precision: 0.6282\n",
+            "Recall: 0.6333\n",
+            "F1 Score: 0.6056\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "{'accuracy': 0.6332607116920842,\n",
+              " 'precision': 0.6281902312547867,\n",
+              " 'recall': 0.6332607116920842,\n",
+              " 'f1': 0.6055503340353303}"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "evaluate_model(model_general, X_test_padded, y_test_categorical, encoder, \"General GloVe BiLSTM\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "972eb0b4",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 41ms/step\n",
+            "Classification Report for Twitter GloVe BiLSTM:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.65      0.60      0.62      1288\n",
+            "           1       0.71      0.67      0.69      1222\n",
+            "           2       0.25      0.43      0.32       244\n",
+            "\n",
+            "    accuracy                           0.61      2754\n",
+            "   macro avg       0.54      0.57      0.54      2754\n",
+            "weighted avg       0.64      0.61      0.62      2754\n",
+            "\n",
+            "Accuracy: 0.6137\n",
+            "Precision: 0.6410\n",
+            "Recall: 0.6137\n",
+            "F1 Score: 0.6244\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "{'accuracy': 0.6136528685548294,\n",
+              " 'precision': 0.640951792092309,\n",
+              " 'recall': 0.6136528685548294,\n",
+              " 'f1': 0.6243579923893844}"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "evaluate_model(model_twitter, X_test_padded, y_test_categorical, encoder, \"Twitter GloVe BiLSTM\")"
+      ]
     }
   ],
   "metadata": {
