feat: prepare dataset for masked language modeling

--- a/main.ipynb
+++ b/main.ipynb
@@ -3878,6 +3878,125 @@
       "source": [
         "evaluate_model(model_twitter, X_test_padded, y_test_categorical, encoder, \"Twitter GloVe BiLSTM\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "fbb5f8e2",
+      "metadata": {},
+      "source": [
+        "### LLM-based Methods"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "7bd0d13b",
+      "metadata": {},
+      "source": [
+        "### MLM distilBERT"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "205c9140",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install transformers datasets"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "6a6eb47a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from transformers import DistilBertConfig, DistilBertForMaskedLM, DistilBertTokenizerFast, DataCollatorForLanguageModeling, Trainer, TrainingArguments\n",
+        "from datasets import Dataset, DatasetDict"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "fa311887",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "try:\n",
+        "    with open(\"corpus.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+        "        lines = f.readlines()\n",
+        "\n",
+        "    df_corpus = pandas.DataFrame(lines, columns=[\"text\"])\n",
+        "\n",
+        "except FileNotFoundError:\n",
+        "    print(\"Pre-train corpus not found. Upload the file first.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ae75ec90",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "raw_dataset = Dataset.from_pandas(df_corpus)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "08e6154b",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tokenizer = DistilBertTokenizerFast.from_pretrained(\"distilbert-base-uncased\")\n",
+        "config = DistilBertConfig.from_pretrained(\"distilbert-base-uncased\")\n",
+        "model = DistilBertForMaskedLM.from_pretrained(\"distilbert-base-uncased\", config=config)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "dea4107e",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def tokenize_function(examples):\n",
+        "    return tokenizer(examples[\"text\"], truncation=True, max_length=128)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0a0cd511",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tokenized_dataset = raw_dataset.map(tokenize_function, batched=True, num_proc=4, remove_columns=[\"text\"])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "11652f2c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_dataset = DatasetDict({\"train\": tokenized_dataset})"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d4d06913",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data_collator = DataCollatorForLanguageModeling(\n",
+        "    tokenizer=tokenizer, mlm=True, mlm_probability=0.15\n",
+        ")"
+      ]
     }
   ],
   "metadata": {
