feat: pre-train distilBERT

--- a/main.ipynb
+++ b/main.ipynb
@@ -3997,6 +3997,162 @@
         "    tokenizer=tokenizer, mlm=True, mlm_probability=0.15\n",
         ")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "719f0876",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "training_args = TrainingArguments(\n",
+        "    output_dir=\"./mlm_results\",\n",
+        "    overwrite_output_dir=True,\n",
+        "    num_train_epochs=3,\n",
+        "    per_device_train_batch_size=16,\n",
+        "    prediction_loss_only=True,\n",
+        "    report_to=\"none\"\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d90212d5",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer = Trainer(\n",
+        "    model=model,\n",
+        "    args=training_args,\n",
+        "    train_dataset=train_dataset[\"train\"],\n",
+        "    data_collator=data_collator,\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "79f25a93",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Starting pre-training...\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "\n",
+              "    <div>\n",
+              "      \n",
+              "      <progress value='1491' max='1491' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [1491/1491 07:07, Epoch 3/3]\n",
+              "    </div>\n",
+              "    <table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              " <tr style=\"text-align: left;\">\n",
+              "      <th>Step</th>\n",
+              "      <th>Training Loss</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>500</td>\n",
+              "      <td>2.328400</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>1000</td>\n",
+              "      <td>2.142400</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table><p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Pre-training finished.\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Starting pre-training...\")\n",
+        "trainer.train()\n",
+        "print(\"Pre-training finished.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e5d88e15",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Starting pre-training...\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "\n",
+              "    <div>\n",
+              "      \n",
+              "      <progress value='1491' max='1491' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [1491/1491 07:07, Epoch 3/3]\n",
+              "    </div>\n",
+              "    <table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              " <tr style=\"text-align: left;\">\n",
+              "      <th>Step</th>\n",
+              "      <th>Training Loss</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>500</td>\n",
+              "      <td>2.328400</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>1000</td>\n",
+              "      <td>2.142400</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table><p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Pre-training finished.\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Starting pre-training...\")\n",
+        "trainer.train()\n",
+        "print(\"Pre-training finished.\")"
+      ]
     }
   ],
   "metadata": {
