feat: prepare dataset for fine-tuning

--- a/main.ipynb
+++ b/main.ipynb
@@ -4093,65 +4093,168 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "7f252a9c",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
-      "id": "e5d88e15",
+      "id": "cca8165d",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer.save_model(\"./pre-trained-distilbert-mlm\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1707b026",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from transformers import DistilBertForSequenceClassification, DistilBertTokenizerFast, Trainer, TrainingArguments"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0080f060",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install datasets transformers -U"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c604736d",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X_train_list = X_train.tolist()\n",
+        "y_train_list = [int(label) for label in y_train_encoded]\n",
+        "\n",
+        "X_val_list = X_test.tolist()\n",
+        "y_val_list = [int(label) for label in y_test_encoded]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "32c605fd",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tokenizer = DistilBertTokenizerFast.from_pretrained(\"./pre-trained-distilbert-mlm\")\n",
+        "model = DistilBertForSequenceClassification.from_pretrained(\"./pre-trained-distilbert-mlm\", num_labels=3)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ae9afefa",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from datasets import Dataset, Features, ClassLabel, Value"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f41f1850",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "features = Features({\n",
+        "    \"text\": Value(\"string\"),\n",
+        "    \"label\": ClassLabel(num_classes=3)\n",
+        "})"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "42df1bbe",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_ds = Dataset.from_dict({\"text\": X_train_list, \"label\": y_train_list}, features=features)\n",
+        "val_ds = Dataset.from_dict({\"text\": X_val_list, \"label\": y_val_list}, features=features)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8ca799ae",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def tokenize_function(examples):\n",
+        "    return tokenizer(examples[\"text\"], truncation=True, padding=\"max_length\", max_length=128)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "fb532e12",
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Starting pre-training...\n"
-          ]
-        },
-        {
           "data": {
-            "text/html": [
-              "\n",
-              "    <div>\n",
-              "      \n",
-              "      <progress value='1491' max='1491' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [1491/1491 07:07, Epoch 3/3]\n",
-              "    </div>\n",
-              "    <table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              " <tr style=\"text-align: left;\">\n",
-              "      <th>Step</th>\n",
-              "      <th>Training Loss</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <td>500</td>\n",
-              "      <td>2.328400</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>1000</td>\n",
-              "      <td>2.142400</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table><p>"
-            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "04ed888ee2a74e7fbc7e3fa26394dbe2",
+              "version_major": 2,
+              "version_minor": 0
+            },
             "text/plain": [
-              "<IPython.core.display.HTML object>"
+              "Map:   0%|          | 0/11014 [00:00<?, ? examples/s]"
             ]
           },
           "metadata": {},
           "output_type": "display_data"
         },
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Pre-training finished.\n"
-          ]
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "f5f478e03027489c92f4b18ecef43557",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Map:   0%|          | 0/2754 [00:00<?, ? examples/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
-        "print(\"Starting pre-training...\")\n",
-        "trainer.train()\n",
-        "print(\"Pre-training finished.\")"
+        "train_ds = train_ds.map(tokenize_function, batched=True)\n",
+        "val_ds = val_ds.map(tokenize_function, batched=True)\n",
+        "\n",
+        "train_ds = train_ds.remove_columns([\"text\"])\n",
+        "val_ds = val_ds.remove_columns([\"text\"])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9d874529",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_ds.set_format(\"numpy\")\n",
+        "val_ds.set_format(\"numpy\")\n",
+        "\n",
+        "train_ds.set_format(\"torch\")\n",
+        "val_ds.set_format(\"torch\")"
       ]
     }
   ],
